Finished all requirements

--- a/PetFinderApp/Base.lproj/Main.storyboard
+++ b/PetFinderApp/Base.lproj/Main.storyboard
@@ -33,23 +33,25 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ce0-Mw-xyd">
-                                        <rect key="frame" x="266" y="36.666666666666664" width="104" height="27.999999999999993"/>
+                                        <rect key="frame" x="287" y="36.666666666666664" width="73" height="27.999999999999993"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="28" id="6lZ-2R-6jr"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="104" id="jFN-IY-wBE"/>
+                                            <constraint firstAttribute="height" constant="28" id="C9U-7d-V33"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <state key="normal" title=" search" image="searchbutton"/>
+                                        <connections>
+                                            <action selector="searchbtnpressed:" destination="u71-pk-REH" eventType="touchUpInside" id="Gce-yb-BK4"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="ce0-Mw-xyd" firstAttribute="leading" relation="lessThanOrEqual" secondItem="kS8-Mh-u2q" secondAttribute="trailing" constant="16" id="09b-It-4UI"/>
+                                    <constraint firstItem="ce0-Mw-xyd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kS8-Mh-u2q" secondAttribute="trailing" constant="37" id="84P-87-LJu"/>
                                     <constraint firstItem="kS8-Mh-u2q" firstAttribute="top" secondItem="446-Vp-tDB" secondAttribute="top" constant="35" id="8bg-kT-JfN"/>
                                     <constraint firstItem="kS8-Mh-u2q" firstAttribute="centerX" secondItem="446-Vp-tDB" secondAttribute="centerX" id="IHy-t6-y6V"/>
-                                    <constraint firstAttribute="trailing" secondItem="ce0-Mw-xyd" secondAttribute="trailing" constant="5" id="XSH-47-Cgn"/>
+                                    <constraint firstAttribute="trailing" secondItem="ce0-Mw-xyd" secondAttribute="trailing" constant="15" id="RYz-mf-sCf"/>
+                                    <constraint firstItem="ce0-Mw-xyd" firstAttribute="centerY" secondItem="kS8-Mh-u2q" secondAttribute="centerY" id="ZiD-Rf-Dtp"/>
                                     <constraint firstAttribute="height" constant="77" id="d1w-r5-nFC"/>
-                                    <constraint firstItem="ce0-Mw-xyd" firstAttribute="centerY" secondItem="kS8-Mh-u2q" secondAttribute="centerY" id="iQy-ek-r1E"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m1b-k5-37c">
@@ -135,6 +137,7 @@
                                         </state>
                                         <connections>
                                             <action selector="initiateSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="061-Sr-YKQ"/>
+                                            <action selector="initiateSearch:" destination="u71-pk-REH" eventType="touchUpInside" id="Z5q-Dy-scr"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -148,7 +151,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Swe-8D-B3y">
-                                <rect key="frame" x="0.0" y="77" width="375" height="735"/>
+                                <rect key="frame" x="0.0" y="87" width="375" height="725"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="y2H-bh-B8p">
                                     <size key="itemSize" width="160" height="193"/>
@@ -165,27 +168,22 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ac9-1C-1B4">
-                                                    <rect key="frame" x="18" y="15" width="124" height="104"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="124" id="sRW-Lq-BVF"/>
-                                                        <constraint firstAttribute="height" constant="104" id="veC-Ko-Usb"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="18" y="57" width="124" height="62"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrY-at-FYg">
-                                                    <rect key="frame" x="18" y="155" width="124" height="31"/>
+                                                    <rect key="frame" x="65.333333333333329" y="155" width="29.333333333333329" height="31"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="124" id="0FH-pn-3oS"/>
-                                                        <constraint firstAttribute="height" constant="31" id="1se-ov-yQ8"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="31" id="1se-ov-yQ8"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AzD-NY-U4i">
-                                                    <rect key="frame" x="18" y="129" width="124" height="21"/>
+                                                    <rect key="frame" x="65.333333333333329" y="129" width="29.333333333333329" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="Rv5-VW-Lfh"/>
-                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="124" id="fIu-CW-1RA"/>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="fIu-CW-1RA"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                                     <nil key="textColor"/>
@@ -195,14 +193,15 @@
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="0.85658176369863015" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="HrY-at-FYg" secondAttribute="trailing" constant="18" id="6DC-nT-396"/>
-                                            <constraint firstItem="AzD-NY-U4i" firstAttribute="top" secondItem="ac9-1C-1B4" secondAttribute="bottom" constant="10" id="9wP-bG-LmQ"/>
-                                            <constraint firstItem="AzD-NY-U4i" firstAttribute="leading" secondItem="0Ro-IS-xXK" secondAttribute="leadingMargin" constant="10" id="M5y-Kz-nfP"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="AzD-NY-U4i" secondAttribute="trailing" constant="10" id="Od7-jl-OwY"/>
-                                            <constraint firstItem="HrY-at-FYg" firstAttribute="leading" secondItem="0Ro-IS-xXK" secondAttribute="leading" constant="18" id="bkV-eu-JJq"/>
-                                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="ac9-1C-1B4" secondAttribute="trailing" constant="10" id="fyZ-rU-wK1"/>
+                                            <constraint firstItem="HrY-at-FYg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0Ro-IS-xXK" secondAttribute="leading" constant="15" id="6uA-pc-QDk"/>
+                                            <constraint firstItem="HrY-at-FYg" firstAttribute="centerX" secondItem="AzD-NY-U4i" secondAttribute="centerX" id="9n1-dE-65h"/>
+                                            <constraint firstItem="AzD-NY-U4i" firstAttribute="top" secondItem="ac9-1C-1B4" secondAttribute="bottom" constant="10" id="Phc-e0-uLB"/>
+                                            <constraint firstItem="AzD-NY-U4i" firstAttribute="centerX" secondItem="ac9-1C-1B4" secondAttribute="centerX" id="RPq-e1-X4R"/>
+                                            <constraint firstItem="ac9-1C-1B4" firstAttribute="top" secondItem="0Ro-IS-xXK" secondAttribute="topMargin" constant="5" id="Rmn-36-CZp"/>
+                                            <constraint firstItem="ac9-1C-1B4" firstAttribute="leading" secondItem="0Ro-IS-xXK" secondAttribute="leadingMargin" constant="10" id="UHr-lN-RH8"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HrY-at-FYg" secondAttribute="trailing" constant="15" id="eEf-A1-qNQ"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="ac9-1C-1B4" secondAttribute="trailing" constant="10" id="jE8-7Q-b11"/>
                                             <constraint firstAttribute="bottom" secondItem="HrY-at-FYg" secondAttribute="bottom" constant="7" id="uzJ-0F-348"/>
-                                            <constraint firstItem="ac9-1C-1B4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0Ro-IS-xXK" secondAttribute="leadingMargin" constant="10" id="x8e-an-Xbx"/>
                                             <constraint firstItem="HrY-at-FYg" firstAttribute="top" secondItem="AzD-NY-U4i" secondAttribute="bottom" constant="5" id="zJh-aX-Tl6"/>
                                         </constraints>
                                         <connections>
@@ -222,7 +221,7 @@
                             <constraint firstAttribute="bottom" secondItem="Swe-8D-B3y" secondAttribute="bottom" id="QOH-f9-cJ8"/>
                             <constraint firstItem="446-Vp-tDB" firstAttribute="top" secondItem="jFb-xY-67q" secondAttribute="top" id="Uqo-Pn-EME"/>
                             <constraint firstItem="Swe-8D-B3y" firstAttribute="leading" secondItem="kXr-ko-eKJ" secondAttribute="leading" id="YXZ-h5-EjA"/>
-                            <constraint firstItem="Swe-8D-B3y" firstAttribute="top" secondItem="446-Vp-tDB" secondAttribute="bottom" id="dXN-9D-bFN"/>
+                            <constraint firstItem="Swe-8D-B3y" firstAttribute="top" secondItem="446-Vp-tDB" secondAttribute="bottom" constant="10" id="dXN-9D-bFN"/>
                             <constraint firstItem="446-Vp-tDB" firstAttribute="trailing" secondItem="kXr-ko-eKJ" secondAttribute="trailing" id="dlf-it-xrV"/>
                             <constraint firstItem="446-Vp-tDB" firstAttribute="leading" secondItem="kXr-ko-eKJ" secondAttribute="leading" id="gvp-OH-E4L"/>
                             <constraint firstItem="m1b-k5-37c" firstAttribute="trailing" secondItem="kXr-ko-eKJ" secondAttribute="trailing" id="tvG-Tn-KEn"/>
@@ -341,7 +340,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PetFinder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ady-lR-HHn">
-                                        <rect key="frame" x="125.66666666666669" y="35" width="124.33333333333331" height="31"/>
+                                        <rect key="frame" x="125.33333333333334" y="35" width="124.33333333333334" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="2MA-8G-2It"/>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="159" id="vHG-Qa-irS"/>
@@ -351,10 +350,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3O-Ad-LL8">
-                                        <rect key="frame" x="266" y="36.666666666666664" width="104" height="27.999999999999993"/>
+                                        <rect key="frame" x="297" y="36.666666666666664" width="73" height="27.999999999999993"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="28" id="Jku-YU-ukQ"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="104" id="zuY-LA-RFP"/>
+                                            <constraint firstAttribute="height" constant="28" id="Rfx-sH-2gL"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <state key="normal" title=" search" image="searchbutton"/>
@@ -366,11 +364,11 @@
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="Ady-lR-HHn" firstAttribute="top" secondItem="m0S-67-4Dd" secondAttribute="top" constant="35" id="0T5-0p-EWN"/>
+                                    <constraint firstAttribute="trailing" secondItem="y3O-Ad-LL8" secondAttribute="trailing" constant="5" id="97T-iu-cCh"/>
                                     <constraint firstAttribute="height" constant="77" id="EOp-B3-b9f"/>
-                                    <constraint firstAttribute="trailing" secondItem="y3O-Ad-LL8" secondAttribute="trailing" constant="5" id="MeD-wN-qnX"/>
+                                    <constraint firstItem="y3O-Ad-LL8" firstAttribute="centerY" secondItem="Ady-lR-HHn" secondAttribute="centerY" id="lhF-Yk-o1x"/>
+                                    <constraint firstItem="y3O-Ad-LL8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ady-lR-HHn" secondAttribute="trailing" constant="47.329999999999998" id="piy-Wx-dCS"/>
                                     <constraint firstItem="Ady-lR-HHn" firstAttribute="centerX" secondItem="m0S-67-4Dd" secondAttribute="centerX" id="uvH-B7-2od"/>
-                                    <constraint firstItem="y3O-Ad-LL8" firstAttribute="centerY" secondItem="Ady-lR-HHn" secondAttribute="centerY" id="ySR-bL-k8f"/>
-                                    <constraint firstItem="y3O-Ad-LL8" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Ady-lR-HHn" secondAttribute="trailing" constant="16" id="zf2-WQ-rZX"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="125" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Di-tI-oZ1">
